// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShowMoreComponent /> should render Show Less button when allItemsLength is equal to currentLimit 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="as-showMore custom-container-class"
  onClick={[Function mockConstructor]}
>
  <div class="as-showMore--less">
    <b>+ Show less</b>
  </div>
</div>

`;

exports[`<ShowMoreComponent /> should render Show More button when allItemsLength is bigger than currentLimit 1`] = `
preact-render-spy (1 nodes)
-------
<div
  class="as-showMore custom-container-class"
  onClick={[Function mockConstructor]}
>
  <div class="as-showMore--more">
    <b>+ Show more</b>
  </div>
</div>

`;

exports[`<ShowMoreComponent /> should render nothing allItemsLength is smaller than currentLimit 1`] = `
preact-render-spy (1 nodes)
-------
{null}

`;
